--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -3,6 +3,35 @@
     Register Page
 {% endblock %}
 
+
 {% block content %}
-<h1> Register Form</h1>
+<body class = 'text-center'>
+
+    <div class="container">
+        <form method="POST" class = 'form-register' style = "color:white">
+
+            <img class="mb-4" src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Denver_skyline.jpg" 
+            alt="", height="200", width="200", style="border-radius: 50%;">
+            <h1 class="h3 mb-3 font-weight-normal">
+                Please Create your Account
+            </h1>
+            <br>
+
+            {{ form.username.label() }}
+            {{ form.username(class = "form-control", placeholder = 'User Name') }}
+
+            {{ form.email_address.label() }}
+            {{ form.email_address(class = "form-control", placeholder = 'Email Address') }}
+
+            {{ form.password1.label() }}
+            {{ form.password1(class = "form-control", placeholder = 'Password') }}
+
+            {{ form.password2.label() }}
+            {{ form.password2(class = "form-control", placeholder = 'Confirm Password') }}
+
+            <br>
+            {{ form.submit(class = "btn-lg btn-block btn-primary")}}
+        </form>
+    </div>
+</body>
 {% endblock %}
