--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -9,6 +9,7 @@
 
     <div class="container">
         <form method="POST" class = 'form-register' style = "color:white">
+            {{ form.hidden_tag() }}
 
             <img class="mb-4" src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Denver_skyline.jpg" 
             alt="", height="200", width="200", style="border-radius: 50%;">
