--- a/market/templates/login.html
+++ b/market/templates/login.html
@@ -6,6 +6,34 @@
 
 {% block content %}
 <body class = 'text-center'>
-        
+    <div class="container">
+        <form method="POST" class="form-signin" style="color:white">
+            {{ form.hidden_tag() }}
+            <img class="mb-4" 
+            src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Denver_skyline.jpg" 
+            height="200", width="200", style="border-radius: 50%;">
+            
+            <h1 class="h3 mb-3 font-weight-normal">
+                Please Login
+            </h1>
+            <br>
+            {{ form.username.label() }}
+            {{ form.username(class="form-control", placeholder="User Name") }}
+
+            {{ form.password.label() }}
+            {{ form.password(class="form-control", placeholder="Password") }}
+
+            <br>
+
+
+            <div class="checkbox mb-3">
+               <h6>Do not have an account?</h6>
+               <a class="btn btn-sm btn-secondary" href="{{ url_for('register_page') }}">Register</a>
+            </div>
+
+            {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
+
+        </form>
+    </div> 
 </body>
 {% endblock %}
